--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,8 @@ license = "LGPL-3.0+"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+default = ["std"]
+std = []
+
 [dependencies]
